@@ -1,3 +1,7 @@
+[B]Version v1.7.9[/B]
+- Fixed URL for reloading cache.
+- Added favourites item.
+
 [B]Version v1.7.8[/B]
 - Added Auto Playback settings. Default is enabled.
 
